files/homelab/manifests/80-gpu-operator/10-gpu-operator.yaml
# GENERATED by scripts/render-homelab-manifests.py; do not edit.
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: gpu-operator-node-feature-discovery-worker
  namespace: gpu-operator
  labels:
    helm.sh/chart: node-feature-discovery-0.19.0
    app.kubernetes.io/name: node-feature-discovery
    app.kubernetes.io/instance: gpu-operator
    app.kubernetes.io/version: v0.19.0
    app.kubernetes.io/managed-by: Helm
    role: worker
spec:
  revisionHistoryLimit: null
  updateStrategy:
    rollingUpdate:
      maxUnavailable: 10%
  selector:
    matchLabels:
      app.kubernetes.io/name: node-feature-discovery
      app.kubernetes.io/instance: gpu-operator
      role: worker
  template:
    metadata:
      labels:
        app.kubernetes.io/name: node-feature-discovery
        app.kubernetes.io/instance: gpu-operator
        role: worker
      annotations:
        checksum/config: 956904209c9a8b4d256ab8c2fc0beb2bc4b384994e31ed977293f5bcd77371c6
    spec:
      dnsPolicy: ClusterFirstWithHostNet
      priorityClassName: system-node-critical
      imagePullSecrets: null
      serviceAccountName: node-feature-discovery
      securityContext: {}
      hostNetwork: false
      containers:
      - name: worker
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
          runAsNonRoot: true
        image: registry.k8s.io/nfd/node-feature-discovery:v0.19.0@sha256:2fa1c99ad09bdf2c8ad97706a4ad2fd548c84d5ecd70ba32a6152c667b96c4d2
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /healthz
            port: http
          initialDelaySeconds: 10
        readinessProbe:
          httpGet:
            path: /healthz
            port: http
          initialDelaySeconds: 5
          failureThreshold: 10
        resources:
          limits:
            memory: 512Mi
          requests:
            cpu: 5m
            memory: 64Mi
        command:
        - nfd-worker
        args:
        - -owner-refs=pod,ds
        - -port=8080
        ports:
        - containerPort: 8080
          name: http
        volumeMounts:
        - name: host-boot
          mountPath: /host-boot
          readOnly: true
        - name: host-os-release
          mountPath: /host-etc/os-release
          readOnly: true
        - name: host-sys
          mountPath: /host-sys
          readOnly: true
        - name: host-usr-lib
          mountPath: /host-usr/lib
          readOnly: true
        - name: host-lib
          mountPath: /host-lib
          readOnly: true
        - name: host-proc-swaps
          mountPath: /host-proc/swaps
          readOnly: true
        - name: features-d
          mountPath: /etc/kubernetes/node-feature-discovery/features.d/
          readOnly: true
        - name: nfd-worker-conf
          mountPath: /etc/kubernetes/node-feature-discovery
          readOnly: true
      volumes:
      - name: host-boot
        hostPath:
          path: /boot
      - name: host-os-release
        hostPath:
          path: /etc/os-release
      - name: host-sys
        hostPath:
          path: /sys
      - name: host-usr-lib
        hostPath:
          path: /usr/lib
      - name: host-lib
        hostPath:
          path: /lib
      - name: host-proc-swaps
        hostPath:
          path: /proc/swaps
      - name: features-d
        hostPath:
          path: /etc/kubernetes/node-feature-discovery/features.d/
      - name: nfd-worker-conf
        configMap:
          name: gpu-operator-node-feature-discovery-worker-conf
          items:
          - key: nfd-worker.conf
            path: nfd-worker.conf
      tolerations:
      - effect: NoSchedule
        key: node-role.kubernetes.io/control-plane
        operator: Equal
        value: ''
      - effect: NoSchedule
        key: nvidia.com/gpu
        operator: Exists
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gpu-operator-node-feature-discovery-master
  namespace: gpu-operator
  labels:
    helm.sh/chart: node-feature-discovery-0.19.0
    app.kubernetes.io/name: node-feature-discovery
    app.kubernetes.io/instance: gpu-operator
    app.kubernetes.io/version: v0.19.0
    app.kubernetes.io/managed-by: Helm
    role: master
spec:
  replicas: 1
  revisionHistoryLimit: null
  selector:
    matchLabels:
      app.kubernetes.io/name: node-feature-discovery
      app.kubernetes.io/instance: gpu-operator
      role: master
  template:
    metadata:
      labels:
        app.kubernetes.io/name: node-feature-discovery
        app.kubernetes.io/instance: gpu-operator
        role: master
      annotations:
        checksum/config: 45a01a59ca35f0d7fbf4e7899fdbcf2a2550829eab219ab1733f54d67c389e46
    spec:
      dnsPolicy: ClusterFirstWithHostNet
      priorityClassName: system-node-critical
      imagePullSecrets: null
      serviceAccountName: node-feature-discovery
      enableServiceLinks: false
      securityContext: {}
      hostNetwork: false
      containers:
      - name: master
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
          runAsNonRoot: true
        image: registry.k8s.io/nfd/node-feature-discovery:v0.19.0@sha256:2fa1c99ad09bdf2c8ad97706a4ad2fd548c84d5ecd70ba32a6152c667b96c4d2
        imagePullPolicy: IfNotPresent
        startupProbe:
          httpGet:
            path: /healthz
            port: http
          failureThreshold: 30
        livenessProbe:
          httpGet:
            path: /healthz
            port: http
        readinessProbe:
          httpGet:
            path: /healthz
            port: http
          failureThreshold: 10
        ports:
        - containerPort: 8080
          name: http
        command:
        - nfd-master
        resources:
          limits:
            memory: 4Gi
          requests:
            cpu: 100m
            memory: 128Mi
        args:
        - -port=8080
        volumeMounts:
        - name: nfd-master-conf
          mountPath: /etc/kubernetes/node-feature-discovery
          readOnly: true
      volumes:
      - name: nfd-master-conf
        configMap:
          name: gpu-operator-node-feature-discovery-master-conf
          items:
          - key: nfd-master.conf
            path: nfd-master.conf
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - preference:
              matchExpressions:
              - key: node-role.kubernetes.io/control-plane
                operator: In
                values:
                - ''
            weight: 1
      tolerations:
      - effect: NoSchedule
        key: node-role.kubernetes.io/control-plane
        operator: Equal
        value: ''
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gpu-operator-node-feature-discovery-gc
  namespace: gpu-operator
  labels:
    helm.sh/chart: node-feature-discovery-0.19.0
    app.kubernetes.io/name: node-feature-discovery
    app.kubernetes.io/instance: gpu-operator
    app.kubernetes.io/version: v0.19.0
    app.kubernetes.io/managed-by: Helm
    role: gc
spec:
  replicas: 1
  revisionHistoryLimit: null
  selector:
    matchLabels:
      app.kubernetes.io/name: node-feature-discovery
      app.kubernetes.io/instance: gpu-operator
      role: gc
  template:
    metadata:
      labels:
        app.kubernetes.io/name: node-feature-discovery
        app.kubernetes.io/instance: gpu-operator
        role: gc
    spec:
      serviceAccountName: node-feature-discovery
      dnsPolicy: ClusterFirstWithHostNet
      priorityClassName: system-node-critical
      imagePullSecrets: null
      securityContext: {}
      hostNetwork: false
      containers:
      - name: gc
        image: registry.k8s.io/nfd/node-feature-discovery:v0.19.0@sha256:2fa1c99ad09bdf2c8ad97706a4ad2fd548c84d5ecd70ba32a6152c667b96c4d2
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /healthz
            port: http
          initialDelaySeconds: 10
        readinessProbe:
          httpGet:
            path: /healthz
            port: http
          initialDelaySeconds: 5
        command:
        - nfd-gc
        args:
        - -gc-interval=1h
        resources:
          limits:
            memory: 1Gi
          requests:
            cpu: 10m
            memory: 128Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
          runAsNonRoot: true
        ports:
        - name: http
          containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gpu-operator
  namespace: gpu-operator
  labels:
    app.kubernetes.io/name: gpu-operator
    helm.sh/chart: gpu-operator-v26.7.1
    app.kubernetes.io/instance: gpu-operator
    app.kubernetes.io/version: v26.7.1
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: gpu-operator
    nvidia.com/gpu-driver-upgrade-drain.skip: 'true'
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: gpu-operator
      app: gpu-operator
  template:
    metadata:
      labels:
        app.kubernetes.io/name: gpu-operator
        helm.sh/chart: gpu-operator-v26.7.1
        app.kubernetes.io/instance: gpu-operator
        app.kubernetes.io/version: v26.7.1
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/component: gpu-operator
        app: gpu-operator
        nvidia.com/gpu-driver-upgrade-drain.skip: 'true'
      annotations:
        openshift.io/scc: restricted-readonly
    spec:
      serviceAccountName: gpu-operator
      priorityClassName: system-node-critical
      containers:
      - name: gpu-operator
        image: nvcr.io/nvidia/gpu-operator:v26.7.1@sha256:b844f9c033e748b8f9925f791f426a531ee8a855f04d4ccea365378634bcefe5
        imagePullPolicy: IfNotPresent
        command:
        - gpu-operator
        args:
        - --leader-elect
        - --zap-time-encoding=epoch
        - --zap-log-level=info
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8081
          initialDelaySeconds: 15
          periodSeconds: 20
        readinessProbe:
          httpGet:
            path: /readyz
            port: 8081
          initialDelaySeconds: 5
          periodSeconds: 10
        resources:
          limits:
            cpu: 500m
            memory: 350Mi
          requests:
            cpu: 200m
            memory: 100Mi
        ports:
        - name: metrics
          containerPort: 8080
      nodeSelector:
        kubernetes.io/os: linux
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - preference:
              matchExpressions:
              - key: node-role.kubernetes.io/control-plane
                operator: In
                values:
                - ''
            weight: 1
      tolerations:
      - effect: NoSchedule
        key: node-role.kubernetes.io/control-plane
        operator: Equal
        value: ''
---
apiVersion: nvidia.com/v1
kind: ClusterPolicy
metadata:
  name: cluster-policy
  labels:
    app.kubernetes.io/name: gpu-operator
    helm.sh/chart: gpu-operator-v26.7.1
    app.kubernetes.io/instance: gpu-operator
    app.kubernetes.io/version: v26.7.1
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: gpu-operator
spec:
  hostPaths:
    rootFS: /
    driverInstallDir: /run/nvidia/driver
  operator:
    runtimeClass: nvidia
  daemonsets:
    labels:
      helm.sh/chart: gpu-operator-v26.7.1
      app.kubernetes.io/managed-by: gpu-operator
    tolerations:
    - effect: NoSchedule
      key: nvidia.com/gpu
      operator: Exists
    priorityClassName: system-node-critical
    updateStrategy: RollingUpdate
    rollingUpdate:
      maxUnavailable: '1'
  validator:
    repository: nvcr.io/nvidia
    image: gpu-operator
    version: sha256:b844f9c033e748b8f9925f791f426a531ee8a855f04d4ccea365378634bcefe5
    imagePullPolicy: IfNotPresent
    plugin:
      env: []
  mig:
    strategy: single
  psa:
    enabled: false
  cdi:
    enabled: true
  driver:
    enabled: false
    useNvidiaDriverCRD: false
    kernelModuleType: auto
    usePrecompiled: false
    repository: nvcr.io/nvidia
    image: driver
    version: sha256:e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855
    imagePullPolicy: IfNotPresent
    startupProbe:
      failureThreshold: 120
      initialDelaySeconds: 60
      periodSeconds: 10
      timeoutSeconds: 60
    rdma:
      enabled: false
      useHostMofed: false
    manager:
      repository: nvcr.io/nvidia/cloud-native
      image: k8s-driver-manager
      version: sha256:37e6bf0cf02b5888288a173353b858da8823cc9f9fb9c6e8d6d1e2cf5bfb16c8
      imagePullPolicy: IfNotPresent
    repoConfig:
      configMapName: ''
    certConfig:
      name: ''
    licensingConfig:
      nlsEnabled: true
      secretName: ''
    virtualTopology:
      config: ''
    kernelModuleConfig:
      name: ''
    upgradePolicy:
      autoUpgrade: true
      maxParallelUpgrades: 1
      maxUnavailable: 25%
      waitForCompletion:
        timeoutSeconds: 0
      podDeletion:
        force: false
        timeoutSeconds: 300
        deleteEmptyDir: false
      drain:
        enable: false
        force: false
        timeoutSeconds: 300
        deleteEmptyDir: false
  vgpuManager:
    enabled: false
    image: vgpu-manager
    imagePullPolicy: IfNotPresent
    kernelModuleConfig:
      name: ''
    driverManager:
      repository: nvcr.io/nvidia/cloud-native
      image: k8s-driver-manager
      version: sha256:37e6bf0cf02b5888288a173353b858da8823cc9f9fb9c6e8d6d1e2cf5bfb16c8
      imagePullPolicy: IfNotPresent
  kataManager:
    enabled: false
    imagePullPolicy: IfNotPresent
  vfioManager:
    enabled: true
    repository: nvcr.io/nvidia/cloud-native
    image: k8s-driver-manager
    version: sha256:37e6bf0cf02b5888288a173353b858da8823cc9f9fb9c6e8d6d1e2cf5bfb16c8
    imagePullPolicy: IfNotPresent
    driverManager:
      repository: nvcr.io/nvidia/cloud-native
      image: k8s-driver-manager
      version: sha256:37e6bf0cf02b5888288a173353b858da8823cc9f9fb9c6e8d6d1e2cf5bfb16c8
      imagePullPolicy: IfNotPresent
  vgpuDeviceManager:
    enabled: true
    repository: nvcr.io/nvidia/cloud-native
    image: vgpu-device-manager
    version: sha256:a846793e78fac0d88156ee08f9835b9e29d99b0b316a165ea4a3acf0e27ad0fd
    imagePullPolicy: IfNotPresent
    config:
      default: default
      name: ''
  ccManager:
    enabled: true
    defaultMode: 'on'
    repository: nvcr.io/nvidia/cloud-native
    image: k8s-cc-manager
    version: sha256:09b376f2bb829819549a4b27086b532047ec51ea5585ca22b96c26c2939e92bd
    imagePullPolicy: IfNotPresent
  toolkit:
    enabled: false
    repository: nvcr.io/nvidia/k8s
    image: container-toolkit
    version: sha256:00a422252dd875b112f5974321c2feebbdf11c338f8ad131e5ce18e5b3a3bfac
    imagePullPolicy: IfNotPresent
    installDir: /usr/local/nvidia
  devicePlugin:
    enabled: true
    repository: nvcr.io/nvidia
    image: k8s-device-plugin
    version: sha256:27c1b2553a690ca3d29889dcd61df97525d46f58272c0be8dc63c2b18f120075
    imagePullPolicy: IfNotPresent
  dcgm:
    enabled: false
    repository: nvcr.io/nvidia/cloud-native
    image: dcgm
    version: sha256:48464e50aa76671f5b204264cb4999739591112bf74330a727523f5655c6d7f2
    imagePullPolicy: IfNotPresent
  dcgmExporter:
    enabled: true
    repository: nvcr.io/nvidia/k8s
    image: dcgm-exporter
    version: sha256:148b0c025e5f2850256816fa33754fbf4733b7a086697a95613fc0ba3db5b003
    imagePullPolicy: IfNotPresent
    serviceMonitor:
      additionalLabels: {}
      enabled: false
      honorLabels: false
      interval: 15s
      relabelings: []
      scrapeTimeout: 10s
    service:
      internalTrafficPolicy: Cluster
  gfd:
    enabled: true
    repository: nvcr.io/nvidia
    image: k8s-device-plugin
    version: sha256:27c1b2553a690ca3d29889dcd61df97525d46f58272c0be8dc63c2b18f120075
    imagePullPolicy: IfNotPresent
  migManager:
    enabled: true
    repository: nvcr.io/nvidia/cloud-native
    image: k8s-mig-manager
    version: sha256:c1674fa2f46012dc425539f7fcac6445dce13bc81a05e4f91e311c7b8c27bcaf
    imagePullPolicy: IfNotPresent
    config:
      default: all-disabled
    gpuClientsConfig:
      name: ''
  nodeStatusExporter:
    enabled: false
    repository: nvcr.io/nvidia
    image: gpu-operator
    version: sha256:b844f9c033e748b8f9925f791f426a531ee8a855f04d4ccea365378634bcefe5
    imagePullPolicy: IfNotPresent
  gds:
    enabled: false
    repository: nvcr.io/nvidia/cloud-native
    image: nvidia-fs
    version: sha256:e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855
    imagePullPolicy: IfNotPresent
  gdrcopy:
    enabled: false
    repository: nvcr.io/nvidia/cloud-native
    image: gdrdrv
    version: sha256:e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855
    imagePullPolicy: IfNotPresent
  sandboxWorkloads:
    enabled: false
    defaultWorkload: container
    mode: kubevirt
  sandboxDevicePlugin:
    enabled: true
    repository: nvcr.io/nvidia
    image: kubevirt-gpu-device-plugin
    version: sha256:367c597799aa6925f5bd2bc4bcdc45c26f018d13cdc2ce9aaf1ca07c492c6d9e
    imagePullPolicy: IfNotPresent
  kataSandboxDevicePlugin:
    enabled: true
    repository: nvcr.io/nvidia/cloud-native
    image: nvidia-sandbox-device-plugin
    version: sha256:5b59e2e534c804381eb0055f7e2511eea812bae33f1ea67e306dab64870454bb
    imagePullPolicy: IfNotPresent
